son satıra >>> eklendi

--- a/Prime_number.ipynb
+++ b/Prime_number.ipynb
@@ -15,7 +15,7 @@
     "if list :\r\n",
     "    print(\"The number {} is not a prime number because it is divisible by {}.\".format(number,list))\r\n",
     "else :\r\n",
-    "    print(\"{} is a prime number.\".format(number))"
+    "    print(\">>> {} is a prime number.\".format(number))"
    ],
    "outputs": [
     {
